--- a/2017/Makefile
+++ b/2017/Makefile
@@ -4,3 +4,7 @@ all: day01
 day01:
 	time nim c --out:./nim/build/main nim/day01.nim
 	time ./nim/build/main
+
+day02:
+	time nim c --out:./nim/build/main nim/day02.nim
+	time ./nim/build/main
