Add day03 part1

--- a/2017/Makefile
+++ b/2017/Makefile
@@ -1,5 +1,5 @@
 
-all: day01
+all: day03
 
 day01:
 	time nim c --out:./nim/build/main nim/day01.nim
@@ -7,4 +7,8 @@ day01:
 
 day02:
 	time nim c --out:./nim/build/main nim/day02.nim
+	time ./nim/build/main
+
+day03:
+	time nim c --out:./nim/build/main nim/day03.nim
 	time ./nim/build/main
