--- a/2017/Makefile
+++ b/2017/Makefile
@@ -1,5 +1,5 @@
 
-all: day03
+all: day04
 
 day01:
 	time nim c --out:./nim/build/main nim/day01.nim
@@ -11,4 +11,8 @@ day02:
 
 day03:
 	time nim c --out:./nim/build/main nim/day03.nim
+	time ./nim/build/main
+
+day04:
+	time nim c --out:./nim/build/main nim/day04.nim
 	time ./nim/build/main
