--- a/2017/Makefile
+++ b/2017/Makefile
@@ -1,5 +1,5 @@
 
-all: day04
+all: day05
 
 day01:
 	time nim c --out:./nim/build/main nim/day01.nim
@@ -15,4 +15,8 @@ day03:
 
 day04:
 	time nim c --out:./nim/build/main nim/day04.nim
+	time ./nim/build/main
+
+day05:
+	time nim c --out:./nim/build/main nim/day05.nim
 	time ./nim/build/main
