--- a/2017/Makefile
+++ b/2017/Makefile
@@ -1,5 +1,5 @@
 
-all: day05
+all: day06
 
 day01:
 	time nim c --out:./nim/build/main nim/day01.nim
@@ -19,4 +19,8 @@ day04:
 
 day05:
 	time nim c --out:./nim/build/main nim/day05.nim
+	time ./nim/build/main
+
+day06:
+	time nim c --out:./nim/build/main nim/day06.nim
 	time ./nim/build/main
