--- a/2018/Makefile
+++ b/2018/Makefile
@@ -1,7 +1,12 @@
 
-all: day01
+all: day02
 
 day01:
-	time nim c -d:release --out:./nim/build/main nim/day01.nim
+	time nim c --out:./nim/build/main nim/day01.nim
 	time ./nim/build/main
 	time python python/day01.py
+
+day02:
+	time nim c --out:./nim/build/main nim/day02.nim
+	time ./nim/build/main
+	time python python/day02.py
