--- a/2018/Makefile
+++ b/2018/Makefile
@@ -1,5 +1,5 @@
 
-all: day02
+all: day03
 
 day01:
 	time nim c --out:./nim/build/main nim/day01.nim
@@ -10,3 +10,8 @@ day02:
 	time nim c --out:./nim/build/main nim/day02.nim
 	time ./nim/build/main
 	time python python/day02.py
+
+day03:
+	time nim c --out:./nim/build/main nim/day03.nim
+	time ./nim/build/main
+	time python python/day03.py
