--- a/2018/Makefile
+++ b/2018/Makefile
@@ -1,5 +1,5 @@
 
-all: day03
+all: day04
 
 day01:
 	time nim c --out:./nim/build/main nim/day01.nim
@@ -15,3 +15,8 @@ day03:
 	time nim c --out:./nim/build/main nim/day03.nim
 	time ./nim/build/main
 	time python python/day03.py
+
+day04:
+	# time nim c --out:./nim/build/main nim/day04.nim
+	# time ./nim/build/main
+	time python python/day04.py
