--- a/2019/julia/Project.toml
+++ b/2019/julia/Project.toml
@@ -4,3 +4,4 @@ Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 Crayons = "a8cc5b0e-0ffa-5ad4-8c14-923d3ee1735f"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
+StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
