--- a/2019/julia/aoc/Project.toml
+++ b/2019/julia/aoc/Project.toml
@@ -10,6 +10,7 @@ Combinatorics = "861a8166-3701-5b0c-9a16-15d98fcdc6aa"
 DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
+Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
 REPL = "3fa0cd96-eef1-5676-8a61-b3b8758bbffb"
 StaticArrays = "90137ffa-7385-5640-81b9-e52037218182"
