--- a/2020/julia/Project.toml
+++ b/2020/julia/Project.toml
@@ -14,6 +14,9 @@ Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
+LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
+LightGraphsFlows = "2f5eb75a-258c-59e0-affc-f41c55f75335"
+LightGraphsMatching = "160ba089-64bf-5ba7-9e14-98ab1d9bcb0a"
 Literate = "98b081ad-f1c9-55d3-8b20-4c87d4299306"
 Memoize = "c03570c3-d221-55d1-a50c-7939bbd78826"
 OffsetArrays = "6fe1bfb0-de20-5000-8ca7-80f57d26f881"
