--- a/2020/julia/Project.toml
+++ b/2020/julia/Project.toml
@@ -12,6 +12,7 @@ DataFrames = "a93c6f00-e57d-5684-b7b6-d8193f3e46c0"
 DataStructures = "864edb3b-99cc-5e75-8d2d-829cb0a9cfe8"
 Dates = "ade2ca70-3891-5945-98fb-dc099432e06a"
 GLPK = "60bf3e95-4087-53dc-ae20-288a0d20c6a6"
+GraphRecipes = "bd48cda9-67a9-57be-86fa-5b3c104eda73"
 Ipopt = "b6b21f68-93f8-5de0-b562-5493be1d77c9"
 JuMP = "4076af6c-e467-56ae-b986-b466b2749572"
 LightGraphs = "093fc24a-ae57-5d10-9952-331d41423f4d"
