--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -11,3 +11,4 @@ lazy_static = "1.4.0"
 regex = "1"
 anyhow = "1.0.43"
 reqwest = { version = "0.11", features = ["blocking"] }
+serde_scan = "0.4.1"
