--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -12,3 +12,5 @@ regex = "1"
 anyhow = "1.0.43"
 reqwest = { version = "0.11", features = ["blocking"] }
 serde_scan = "0.4.1"
+itertools = "0.10"
+ndarray = "0.15.4"
