--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -14,6 +14,7 @@ reqwest = { version = "0.11", features = ["blocking"] }
 serde_scan = "0.4.1"
 itertools = "0.10"
 nalgebra = "*"
+html2text = "*"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
