--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -15,6 +15,7 @@ serde_scan = "0.4.1"
 itertools = "0.10"
 nalgebra = "*"
 html2text = "*"
+indoc = "1.0"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
