--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -16,6 +16,7 @@ itertools = "0.10"
 nalgebra = "*"
 html2text = "*"
 indoc = "1.0"
+ansi_term = "0.12.1"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
