--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -17,6 +17,7 @@ nalgebra = "*"
 html2text = "*"
 indoc = "1.0"
 ansi_term = "0.12.1"
+tui = "0.16.0"
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
