--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -6,18 +6,29 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-clap = "3.0.0-beta.5"
-lazy_static = "1.4.0"
-regex = "1"
+ansi_term = "0.12.1"
 anyhow = "1.0.43"
-reqwest = { version = "0.11", features = ["blocking"] }
-serde_scan = "0.4.1"
-itertools = "0.10"
-nalgebra = "*"
+async-std = { version = "1.10.0", features = ["attributes", "unstable"] }
+clap = "3.0.0-beta.5"
+crossterm = { version = "0.22.1", optional = true, default-features = false, features = ["event-stream"] }
+futures = "0.3.16"
+futures-timer = "3.0.2"
 html2text = "*"
 indoc = "1.0"
-ansi_term = "0.12.1"
-tui = "0.16.0"
+itertools = "0.10"
+lazy_static = "1.4.0"
+nalgebra = "*"
+regex = "1"
+reqwest = { version = "0.11", features = ["blocking"] }
+serde_scan = "0.4.1"
+tui = { version = "0.16.0", optional = true, default-features = false }
+serde = { version = "1.0.127", features = ["derive"] }
+serde_json = "1.0.66"
+
+[features]
+default = ["crossterm-backend"]
+crossterm-backend = ["tui/crossterm", "crossterm"]
+
 
 [dev-dependencies]
 criterion = { version = "0.3", features = ["html_reports"] }
