--- a/2021/Cargo.toml
+++ b/2021/Cargo.toml
@@ -2,6 +2,9 @@
 name = "aoc2021"
 version = "0.1.0"
 edition = "2021"
+authors = ["Dheepak Krishnamurthy <me@kdheepak.com>"]
+description = "Advent of Code 2021"
+repository = "https://github.com/kdheepak/adventofcode/tree/main/2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
